# hydrus

./: .deepsource.toml  .gitignore  .pre-commit-config.yaml  .travis.yaml  .travis.yml  Dockerfile  LICENSE  Pipfile  README.md  STARTING.md  TASKS.md  cli.py  config.yml  doc.json  doc.jsonld  doc.py  docker-compose.yml  docker-entrypoint.sh  hydra_openapi_parser.py  main.py  migrations.md  pylintrc  pyproject.toml  requirements.txt  result.yml  setup.py  sqlalchemy_example.db
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: package-publish.yml
alembic/: env.py
doc/: Makefile  conf.py  index.rst  make.bat
doc/rst/: conf.py  hydrus.data.legacy.rst  modules.rst
docs/: STARTING.md  TASKS.md  TUTORIALS.md  hydrus_database.md  specs.txt
examples/: doc.jasonld  petstore_openapi.yaml
examples/drones/: doc.py  doc_gen.py
examples/hydrus-demo-server/: demo.py
examples/subsystem/: spacecraft_parsed_classes.py  spacecraft_vocab_jsonld.py  subsystem_parsed_classes.py  subsystem_vocab_jsonld.py
hydrus/: LogConfig  app.py  app_factory.py  application.py  auth.py  check.py  classes.py  conf.py  database.db  db_entry.py  db_init.py  file.py  generator.py  handlers.py  helpers.py  hydrus_logger.py  item_collection_helpers.py  itemhelper.py  itemhelpers.py  items_helpers.py  itemshelper.py  models.py  properties.py  resources.py  routes.py  server_doc.py  settings.py  socketio_factory.py  subsystem_jsonld.py  sync_namespace.py  test.py  test_app.py  utils.py  uwsgi.ini  vocab.py
hydrus/data/: __init__.py  alembic.ini  apidocumentation.py  astronomy.py  crud.py  crud_helpers.py  crud_raw_sql.py  database.db  db_models.py  doc_parse.py  exceptions.py  generator.py  insert_classes.py  insert_data.py  insert_properties.py  keymap.py  resource_based_classes.py  stale_records_cleanup.py  test.py  test_crud.py.py  test_db.py  user.py
hydrus/extensions/: socketio_factory.py  sync_namespace.py  utils.py
hydrus/gsoc/: app.py  classes.py  database.db  db_entry.py  generator.py  models.py  properties.py
hydrus/hydraspec/: crud.py  crud_template.py  doc_maker.py  doc_writer.py  doc_writer_sample.py  doc_writer_sample_output.py  entrypoint_context_generator.py  entrypoint_generator.py  hydra_doc_sample.py  openapi-hydra_parser.py  parser.py  spacecraft_apidoc.py  subsystem_apidoc.py  vocab_generator.py
hydrus/metadata/: doc.py  doc_gen.py  drone_doc.py  drone_doc_gen.py  drone_parsed_classes.py  entrypoint.py  parser.py  server_doc.py  server_doc_gen.py  server_parsed_classes.py  space_craft.api  spacecraft_apidoc.py  spacecraft_jsonld.py  spacecraft_parsed_classes.py  subsystem.api  subsystem_apidoc.py  subsystem_jsonld.py  subsystem_parsed_classes.py  subsystem_vocab_jsonld.py  vocab.py
hydrus/parser/: openapi-hydra_parser.py  openapi_parser.py  openapi_parser_new.py  openapi_sample.yaml
hydrus/samples/: doc_writer_sample.py  doc_writer_sample_output.py  hydra_doc_sample.py  link_open_api.yaml  movie_api_doc.py  petstore_open_api.yaml  petstore_openapi.yaml
hydrus/server/: application.py  commons.py  handlers.py  parser.py  routes.py
hydrus/system/: factory.py
hydrus/tests/: conftest.py  dummy_data.py  test_app.py  test_auth.py  test_crud.py  test_crud_general.py  test_doc_writer.py  test_doc_writer.py.d232acdff5bf6add5d41cf1ed0134729.py  test_parser.py  test_pep8.py
oldies/data/: apidocumentation.py  astronomy.py
oldies/server/: commons.py  handlers.py  parser.py  routes.py
tests/: conftest.py  test_cli.py  test_pep8.py
tutorials/: WORKFLOW.md
(+59 files in other folders)
