[tool.poetry]
name = "hydrus"
version = "0.5.0"
description = "Hydra Ecosystem Flagship Server. Deploy REST data for Web 3.0"
authors = ["Hydra Ecosystem"]
license = "MIT License"

[tool.poetry.dependencies]
python = "~=3.8.0"
alembic = "1.0.10"
appdirs = "1.4.3"
blinker = "1.4"
flake8 = "~3.8.3"
Flask = "2.0.1"
Flask-Cors = "3.0.10"
Flask-RESTful = "0.3.9"
Flask-SocketIO = "4.2.1"
gevent = "20.12.0"
gevent-websocket = "0.10.1"
hydra_python_core = ">=0.3.1"
hydra_openapi_parser = ">=0.2"
psycopg2-binary = "2.9.3"
pyld = "~2.0.3"
persisting-theory = "0.2.1"
python-engineio = "3.11.2"
python-socketio = "4.4.0"
pytz = "~2019.3"
PyYAML = "6.0"
SQLAlchemy = "1.3.12"
structlog = ">=21.5.0"
hydra-python-core = "0.3.1"
PyLD = "2.0.3"

[tool.poetry.dev-dependencies]
pytest = ">=7.1.2"
pep8 = "1.7.1"
flake8 = ">=3.8.4"
pre-commit = ">=2.19"
mypy = ">=0.971"

[tool.pytest.ini_options]
minversion = "7.1.2"
testpaths = [
    "tests"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
